EKS/DNS/404-ingress-group.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ingress-groups-demo #---> name of ALB
    alb.ingress.kubernetes.io/group.name: my-group  #---> one ALB
    alb.ingress.kubernetes.io/group.order: "2" #---> priority(less number = more prority)
spec:
  ingressClassName: my-aws-ingress-class
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ingress-groups-demo #---> name of ALB
    alb.ingress.kubernetes.io/group.name: my-group #---> one ALB
    alb.ingress.kubernetes.io/group.order: "1" #---> priority(less number = more prority)
spec:
  ingressClassName: my-aws-ingress-class
