EKS/DNS/406-ingress-in-multi-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
  namespace: app1 #---> NameSpace 1
  annotations:
    alb.ingress.kubernetes.io/group.name: myapps #---> same ALB
    alb.ingress.kubernetes.io/group.order: "10"
spec:
  ingressClassName: my-aws-ingress-class
  rules:
  - host: app1.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  namespace: app2 #---> NameSpace 2
  annotations:
    alb.ingress.kubernetes.io/group.name: myapps #---> same ALB
    alb.ingress.kubernetes.io/group.order: "20"
spec:
  ingressClassName: my-aws-ingress-class
  rules:
  - host: app2.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 80

  # ALB
  #  ├── app1.example.com → service app1
  #  └── app2.example.com → service app2
